[gd_scene load_steps=7 format=3 uid="uid://dclr1m78mjbf8"]

[ext_resource type="PackedScene" uid="uid://cmgbms3pjuitq" path="res://scenes/block_window/block_environment/a_block_schema/a_block/a_block.tscn" id="1_r4wct"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/a_block_schema/a_while_block/a_while_block.gd" id="2_2yvj8"]
[ext_resource type="Texture2D" uid="uid://gm5wmvcxxxwl" path="res://Sprites/block_sprites/1x/Asset 8.png" id="3_a52lh"]
[ext_resource type="PackedScene" uid="uid://cai755nf0acib" path="res://scenes/block_window/spawn_block_button/spawn_block_button.tscn" id="3_mwqkr"]
[ext_resource type="PackedScene" uid="uid://d1in5wx8kx4ek" path="res://scenes/block_window/Arrows/arrows.tscn" id="4_jglkq"]
[ext_resource type="PackedScene" uid="uid://dsg1n6q26m5g2" path="res://scenes/block_window/arrow_marker/arrow_marker.tscn" id="4_yh0qn"]

[node name="AWhileBlock" instance=ExtResource("1_r4wct")]
script = ExtResource("2_2yvj8")

[node name="Background" parent="Body" index="0"]
texture_normal = ExtResource("3_a52lh")

[node name="SpawnBlockButton" parent="Body/Content" index="1" instance=ExtResource("3_mwqkr")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 84.0
offset_right = 27.0
offset_bottom = 134.0

[node name="LineConnections" type="Node2D" parent="Body/Content" index="2"]

[node name="Entrance" parent="Body/Content/LineConnections" index="0" instance=ExtResource("4_yh0qn")]
unique_name_in_owner = true
position = Vector2(0, -91)
arrow_angle = 90
arrow_enabled = true

[node name="Exit" parent="Body/Content/LineConnections" index="1" instance=ExtResource("4_yh0qn")]
unique_name_in_owner = true
position = Vector2(152, 0)

[node name="CycleEntrance" parent="Body/Content/LineConnections" index="2" instance=ExtResource("4_yh0qn")]
unique_name_in_owner = true
position = Vector2(-151, 0)
arrow_enabled = true

[node name="CycleExit" parent="Body/Content/LineConnections" index="3" instance=ExtResource("4_yh0qn")]
unique_name_in_owner = true
position = Vector2(0, 92)

[node name="MarginContainer" parent="Body/Content/PopupPanel" index="1"]
offset_right = 196.0
offset_bottom = 114.0

[node name="Arrows" parent="Body/Content/PopupPanel/MarginContainer/VBoxContainer" index="1" instance=ExtResource("4_jglkq")]
unique_name_in_owner = true
layout_mode = 2

[node name="DistanceContainer" type="HBoxContainer" parent="Body/Content/PopupPanel/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="Body/Content/PopupPanel/MarginContainer/VBoxContainer/DistanceContainer" index="0"]
layout_mode = 2
text = "Дистанция"

[node name="DistanceSpinBox" type="SpinBox" parent="Body/Content/PopupPanel/MarginContainer/VBoxContainer/DistanceContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
rounded = true
